--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link href="css/styles.css" rel="stylesheet">
 		<link href="css/animate.css" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
@@ -14,7 +16,16 @@
 			<div id="overlay" class="start">
 				<h2 class="title">Phrase Hunter</h2>
 				<h1 id="game-over-message"></h1>
-				<button id="btn__reset">Start Game</button>
+				<div id="btn__reset"><span>Start Game</span></div>
+			</div>
+
+			<!-- Dark mode switch -->
+			<div class="theme-switch-wrapper">
+				<label class="theme-switch" for="checkbox">
+					<input type="checkbox" id="checkbox" />
+					<div class="slider round"></div>
+			  </label>
+			  <em>Enable Dark Mode</em>
 			</div>
 
 			<div id="banner" class="section">
